objects/Salesperson__c/Salesperson__c.object-meta.xml
<CustomObject>
    <label>Salesperson</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salespeople</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>