objects/Salesperson__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Executive</label>
    <type>Checkbox</type>
</CustomField>