objects/Salesperson__c/fields/AR_Email__c.field-meta.xml
<CustomField>
    <fullName>AR_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Email</label>
    <type>Checkbox</type>
</CustomField>