objects/Salesperson__c/fields/Bad_Salesperson_Record__c.field-meta.xml
<CustomField>
    <fullName>Bad_Salesperson_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Salesperson Record</label>
    <type>Checkbox</type>
</CustomField>