objects/Salesperson__c/fields/Cycle_Chem_Rep__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Chem_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Chem Rep.</label>
    <type>Checkbox</type>
</CustomField>