objects/Salesperson__c/fields/Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Contact</label>
    <type>Checkbox</type>
</CustomField>