objects/Salesperson__c/fields/RSG_EIN__c.field-meta.xml
<CustomField>
    <fullName>RSG_EIN__c</fullName>
    <formula>User__r.RSG_EIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSG EIN #</label>
    <type>Text</type>
</CustomField>