objects/Salesperson__c/fields/Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Code__c</fullName>
    <label>Salesperson Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>