objects/Salesperson__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <label>Territory Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>