objects/Salesperson__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Salesperson_Code__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>User__c</columns>
    <columns>User_Profile__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Bad_Salesperson_Record__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>